opam-version: "2.0"
name: "atomic"
version: "0.1"
synopsis:
  "Compatibility package for OCaml's Atomic module, from 4.12"
author: "OCaml maintainers"
maintainer: "simon.cruanes.2007@m4x.org"
license: "LGPL2.1"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "1.1.0"}
]
tags: [ "atomic" "threads" "compatibility" ]
homepage: "https://github.com/c-cube/ocaml-atomic/"
bug-reports: "https://github.com/c-cube/ocaml-atomic/issues"
dev-repo: "git+https://github.com/c-cube/ocaml-atomic.git"
